fix(gmap-vue): fix linter errors on test and examples folder

--- a/packages/gmap-vue/examples/autoapi.html
+++ b/packages/gmap-vue/examples/autoapi.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>GENERATE_DOC=true</script>
+    <script>
+      GENERATE_DOC = true;
+    </script>
     <script src="dist/autoapi.js"></script>
   </body>
 </html>
