--- a/packages/gmap-vue/examples/basic-marker-clusterer.html
+++ b/packages/gmap-vue/examples/basic-marker-clusterer.html
@@ -1,13 +1,15 @@
 <body>
   <div id="root">
-    <gmap-map :center="center" :zoom="7" style="width: 100%; height: 500px">
+    <gmap-map :center="center" :zoom="7" style="width: 100%; height: 500px;">
       <gmap-cluster>
-        <gmap-marker v-for="(m, index) in markers"
+        <gmap-marker
+          v-for="(m, index) in markers"
           :position="m.position"
-          :clickable="true" :draggable="true"
+          :clickable="true"
+          :draggable="true"
           @click="center=m.position"
           :key="index"
-          ></gmap-marker>
+        ></gmap-marker>
       </gmap-cluster>
     </gmap-map>
   </div>
@@ -19,11 +21,11 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       // gmapCluster *must* be manually imported
       Vue.component('gmap-cluster', GmapVue.Cluster);
 
@@ -32,22 +34,24 @@
         data: {
           center: {
             lat: 10.0,
-            lng: 10.0
+            lng: 10.0,
           },
-          markers: [{
-            position: {
-              lat: 10.0,
-              lng: 10.0
-            }
-          }, {
-            position: {
-              lat: 11.0,
-              lng: 11.0
-            }
-          }]
+          markers: [
+            {
+              position: {
+                lat: 10.0,
+                lng: 10.0,
+              },
+            },
+            {
+              position: {
+                lat: 11.0,
+                lng: 11.0,
+              },
+            },
+          ],
         },
       });
     });
   </script>
-
 </body>
