--- a/packages/gmap-vue/examples/heatmap-layer.html
+++ b/packages/gmap-vue/examples/heatmap-layer.html
@@ -5,7 +5,7 @@
       :zoom="7"
       :center="center"
       map-type-id="roadmap"
-      style="width: 100%; height: 500px"
+      style="width: 100%; height: 500px;"
     >
       <gmap-marker
         v-for="(m, index) in markers"
@@ -29,11 +29,11 @@
     Vue.use(GmapVue, {
       load: {
         key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
-        libraries: 'visualization'
-      }
+        libraries: 'visualization',
+      },
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       new Vue({
         el: '#root',
         data: {
@@ -45,18 +45,18 @@
           this.markers = [
             {
               location: new google.maps.LatLng({ lat: 3, lng: 101 }),
-              weight: 100
+              weight: 100,
             },
             {
               location: new google.maps.LatLng({ lat: 5, lng: 99 }),
-              weight: 50
+              weight: 50,
             },
             {
               location: new google.maps.LatLng({ lat: 6, lng: 97 }),
-              weight: 80
-            }
+              weight: 80,
+            },
           ];
-        }
+        },
       });
     });
   </script>
