--- a/packages/gmap-vue/examples/polyline-editing.html
+++ b/packages/gmap-vue/examples/polyline-editing.html
@@ -8,16 +8,29 @@
       <gmap-autocomplete @place_changed="updateCenter($event)" />
     </label>
 
-    <gmap-map :center="center" :zoom="12" style="width: 100%; height: 500px" ref="map">
-      <gmap-polyline v-if="path.length > 0" :path="path" :editable="true" @path_changed="updateEdited($event)"
-          @rightclick="handleClickForDelete"
-          ref="polyline">
+    <gmap-map
+      :center="center"
+      :zoom="12"
+      style="width: 100%; height: 500px;"
+      ref="map"
+    >
+      <gmap-polyline
+        v-if="path.length > 0"
+        :path="path"
+        :editable="true"
+        @path_changed="updateEdited($event)"
+        @rightclick="handleClickForDelete"
+        ref="polyline"
+      >
       </gmap-polyline>
     </gmap-map>
 
     <div>
-      <textarea :value="polylineGeojson" style="width: 100%; height: 200px"
-        @input="readGeojson">
+      <textarea
+        :value="polylineGeojson"
+        style="width: 100%; height: 200px;"
+        @input="readGeojson"
+      >
       </textarea>
       <div v-if="errorMessage">{{errorMessage}}</div>
     </div>
@@ -35,19 +48,19 @@
       },
     });
 
-    function closeLoop (path) {
-      return path.concat(path.slice(0, 1))
+    function closeLoop(path) {
+      return path.concat(path.slice(0, 1));
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       window.XXX = new Vue({
         el: '#root',
         data: {
-          center: {lat: 1.38, lng: 103.8},
+          center: { lat: 1.38, lng: 103.8 },
           edited: null,
           path: [
-            {lat: 1.33, lng: 103.75},
-            {lat: 1.43, lng: 103.85},
+            { lat: 1.33, lng: 103.75 },
+            { lat: 1.43, lng: 103.85 },
           ],
           mvcPath: null,
           errorMessage: null,
@@ -56,24 +69,28 @@
         watch: {
           polylinePath: _.throttle(function (path) {
             if (path) {
-              this.path = path
-              this.polylineGeojson = JSON.stringify({
-                type: 'Polyline',
-                coordinates: this.path.map(({lat, lng}) => [lng, lat])
-              }, null, 2)
+              this.path = path;
+              this.polylineGeojson = JSON.stringify(
+                {
+                  type: 'Polyline',
+                  coordinates: this.path.map(({ lat, lng }) => [lng, lat]),
+                },
+                null,
+                2
+              );
             }
-          }, 1000)
+          }, 1000),
         },
         computed: {
           polylinePath: function () {
-            if (!this.mvcPath) return null
+            if (!this.mvcPath) return null;
 
             let path = [];
-            for (let j=0; j<this.mvcPath.getLength(); j++) {
+            for (let j = 0; j < this.mvcPath.getLength(); j++) {
               let point = this.mvcPath.getAt(j);
-              path.push({lat: point.lat(), lng: point.lng()});
+              path.push({ lat: point.lat(), lng: point.lng() });
             }
-            return path
+            return path;
           },
         },
         methods: {
@@ -81,35 +98,34 @@
             this.center = {
               lat: place.geometry.location.lat(),
               lng: place.geometry.location.lng(),
-            }
+            };
           },
           updateEdited: function (mvcPath) {
-            this.mvcPath = mvcPath
+            this.mvcPath = mvcPath;
           },
           handleClickForDelete($event) {
             if ($event.vertex) {
-              this.$refs.polyline.$polylineObject.getPaths()
+              this.$refs.polyline.$polylineObject
+                .getPaths()
                 .getAt($event.path)
-                .removeAt($event.vertex)
+                .removeAt($event.vertex);
             }
           },
           readGeojson: function ($event) {
             try {
-              this.polylineGeojson = $event.target.value
+              this.polylineGeojson = $event.target.value;
 
               var v = JSON.parse($event.target.value);
 
-              this.path = v.coordinates
-                .map(([lng, lat]) => ({lat, lng}))
+              this.path = v.coordinates.map(([lng, lat]) => ({ lat, lng }));
 
-              this.errorMessage = null
+              this.errorMessage = null;
             } catch (err) {
-              this.errorMessage = err.message
+              this.errorMessage = err.message;
             }
-          }
-        }
+          },
+        },
       });
     });
   </script>
-
 </body>
