--- a/packages/gmap-vue/examples/resize-bus-destroy.html
+++ b/packages/gmap-vue/examples/resize-bus-destroy.html
@@ -4,7 +4,7 @@
 
     <p>
       There should be no error toggling the visibility of the maps
-      <button @click=updateStyle>
+      <button @click="updateStyle">
         Toggle Visibility
       </button>
     </p>
@@ -13,59 +13,59 @@
       <gmap-map
         :style="currentStyle"
         :center="{lat: 1.38, lng: 103.8}"
-        :zoom=12>
+        :zoom="12"
+      >
       </gmap-map>
 
       <gmap-map
         :style="currentStyle"
         :center="{lat: 1.38, lng: 103.8}"
-        :zoom=12>
+        :zoom="12"
+      >
       </gmap-map>
 
       <gmap-map
         :style="currentStyle"
         :center="{lat: 1.38, lng: 103.8}"
-        :zoom=12
-        :resize-bus="customBus">
+        :zoom="12"
+        :resize-bus="customBus"
+      >
       </gmap-map>
     </div>
   </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
-<script src="gmap-vue.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
+  <script src="gmap-vue.js"></script>
 
-<script>
-
-Vue.use(GmapVue, {
-  load: {
-    key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
-  },
-});
-
-document.addEventListener('DOMContentLoaded', function() {
-  new Vue({
-    el: '#root',
-    data: {
-      currentStyle: {
-        display: 'inline-block',
-        width: '200px',
-        height: '200px',
+  <script>
+    Vue.use(GmapVue, {
+      load: {
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
-      showElements: true,
-      customBus: new Vue(),
-    },
-    methods: {
-      updateStyle() {
-        this.showElements = !this.showElements;
-        Vue.$gmapDefaultResizeBus.$emit('resize');
-      },
-      updateBus() {
-        this.customBus.$emit('resize');
-      }
-    }
-  });
-});
+    });
 
-</script>
-
+    document.addEventListener('DOMContentLoaded', function () {
+      new Vue({
+        el: '#root',
+        data: {
+          currentStyle: {
+            display: 'inline-block',
+            width: '200px',
+            height: '200px',
+          },
+          showElements: true,
+          customBus: new Vue(),
+        },
+        methods: {
+          updateStyle() {
+            this.showElements = !this.showElements;
+            Vue.$gmapDefaultResizeBus.$emit('resize');
+          },
+          updateBus() {
+            this.customBus.$emit('resize');
+          },
+        },
+      });
+    });
+  </script>
 </body>
