--- a/packages/gmap-vue/examples/basic-kml-layer.html
+++ b/packages/gmap-vue/examples/basic-kml-layer.html
@@ -1,7 +1,11 @@
 <body>
   <div id="root">
-    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px">
-      <google-kml-layer v-for="l in kmlLayers" :url="l.url" :clickable="true"></google-kml-layer>
+    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px;">
+      <google-kml-layer
+        v-for="l in kmlLayers"
+        :url="l.url"
+        :clickable="true"
+      ></google-kml-layer>
     </google-map>
   </div>
 
@@ -11,7 +15,7 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
       // Demonstrating how we can customize the name of the components
       installComponents: false,
@@ -26,14 +30,16 @@
         data: {
           center: {
             lat: -19.257753,
-            lng: 146.823688
+            lng: 146.823688,
           },
-          kmlLayers: [{
-            url: 'https://developers.google.com/maps/documentation/javascript/examples/kml/westcampus.kml'
-          }]
+          kmlLayers: [
+            {
+              url:
+                'https://developers.google.com/maps/documentation/javascript/examples/kml/westcampus.kml',
+            },
+          ],
         },
       });
     });
   </script>
-
 </body>
