--- a/packages/gmap-vue/examples/basic-map-functions.html
+++ b/packages/gmap-vue/examples/basic-map-functions.html
@@ -12,8 +12,20 @@
       Fit Bounds
     </button>
 
-    <gmap-map :center="center" :zoom="7" ref="mmm" style="width: 100%; height: 500px">
-      <gmap-marker :key="index" v-for="(m, index) in markers" :position="m.position" :clickable="true" :draggable="true" @click="center=m.position"></gmap-marker>
+    <gmap-map
+      :center="center"
+      :zoom="7"
+      ref="mmm"
+      style="width: 100%; height: 500px;"
+    >
+      <gmap-marker
+        :key="index"
+        v-for="(m, index) in markers"
+        :position="m.position"
+        :clickable="true"
+        :draggable="true"
+        @click="center=m.position"
+      ></gmap-marker>
     </gmap-map>
   </div>
 
@@ -23,29 +35,32 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       new Vue({
         el: '#root',
         data: {
           center: {
             lat: 10.0,
-            lng: 10.0
+            lng: 10.0,
           },
-          markers: [{
-            position: {
-              lat: 10.0,
-              lng: 10.0
-            }
-          }, {
-            position: {
-              lat: 11.0,
-              lng: 11.0
-            }
-          }]
+          markers: [
+            {
+              position: {
+                lat: 10.0,
+                lng: 10.0,
+              },
+            },
+            {
+              position: {
+                lat: 11.0,
+                lng: 11.0,
+              },
+            },
+          ],
         },
 
         methods: {
@@ -54,11 +69,11 @@
 
             b.extend({
               lat: 33.972,
-              lng: 35.4054
+              lng: 35.4054,
             });
             b.extend({
               lat: 33.7606,
-              lng: 35.64592
+              lng: 35.64592,
             });
 
             this.$refs.mmm.fitBounds(b);
@@ -68,11 +83,11 @@
 
             b.extend({
               lat: 33.972,
-              lng: 35.4054
+              lng: 35.4054,
             });
             b.extend({
               lat: 33.7606,
-              lng: 35.64592
+              lng: 35.64592,
             });
 
             this.$refs.mmm.panToBounds(b);
@@ -80,12 +95,11 @@
           panTo() {
             this.$refs.mmm.panTo({
               lat: 47.912867,
-              lng: 106.910723
+              lng: 106.910723,
             });
           },
-        }
+        },
       });
     });
   </script>
-
 </body>
