--- a/packages/gmap-vue/examples/basic-marker-shape.html
+++ b/packages/gmap-vue/examples/basic-marker-shape.html
@@ -2,9 +2,15 @@
   <div id="root">
     Only the dark dots in the middle of the marker are clickable
 
-    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px">
-      <google-marker v-for="m in markers" :position="m.position" :clickable="true"
-      :draggable="true" @click="center=m.position" :shape="shape"></google-marker>
+    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px;">
+      <google-marker
+        v-for="m in markers"
+        :position="m.position"
+        :clickable="true"
+        :draggable="true"
+        @click="center=m.position"
+        :shape="shape"
+      ></google-marker>
     </google-map>
   </div>
 
@@ -15,13 +21,13 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
       // Demonstrating how we can customize the name of the components
       installComponents: false,
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       Vue.component('google-map', GmapVue.Map);
       Vue.component('google-marker', GmapVue.Marker);
 
@@ -30,26 +36,28 @@
         data: {
           center: {
             lat: 10.0,
-            lng: 10.0
+            lng: 10.0,
           },
-          markers: [{
-            position: {
-              lat: 10.0,
-              lng: 10.0
-            }
-          }, {
-            position: {
-              lat: 11.0,
-              lng: 11.0
-            }
-          }],
+          markers: [
+            {
+              position: {
+                lat: 10.0,
+                lng: 10.0,
+              },
+            },
+            {
+              position: {
+                lat: 11.0,
+                lng: 11.0,
+              },
+            },
+          ],
           shape: {
             coords: [10, 10, 10, 15, 15, 15, 15, 10],
-            type: 'poly'
+            type: 'poly',
           },
         },
       });
     });
   </script>
-
 </body>
