--- a/packages/gmap-vue/examples/basic-marker.html
+++ b/packages/gmap-vue/examples/basic-marker.html
@@ -1,7 +1,13 @@
 <body>
   <div id="root">
-    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px">
-      <google-marker v-for="m in markers" :position="m.position" :clickable="true" :draggable="true" @click="center=m.position"></google-marker>
+    <google-map :center="center" :zoom="7" style="width: 100%; height: 500px;">
+      <google-marker
+        v-for="m in markers"
+        :position="m.position"
+        :clickable="true"
+        :draggable="true"
+        @click="center=m.position"
+      ></google-marker>
     </google-map>
   </div>
 
@@ -11,13 +17,13 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
       // Demonstrating how we can customize the name of the components
       installComponents: false,
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       Vue.component('google-map', GmapVue.Map);
       Vue.component('google-marker', GmapVue.Marker);
 
@@ -26,22 +32,24 @@
         data: {
           center: {
             lat: 10.0,
-            lng: 10.0
+            lng: 10.0,
           },
-          markers: [{
-            position: {
-              lat: 10.0,
-              lng: 10.0
-            }
-          }, {
-            position: {
-              lat: 11.0,
-              lng: 11.0
-            }
-          }]
+          markers: [
+            {
+              position: {
+                lat: 10.0,
+                lng: 10.0,
+              },
+            },
+            {
+              position: {
+                lat: 11.0,
+                lng: 11.0,
+              },
+            },
+          ],
         },
       });
     });
   </script>
-
 </body>
