--- a/packages/gmap-vue/examples/drawing-manager.html
+++ b/packages/gmap-vue/examples/drawing-manager.html
@@ -1,10 +1,10 @@
 <body>
   <div id="root">
     <h1>Drawing Manager Example</h1>
-    <div style="width:100%; display: flex; justify-content: center;">
-      <span style="width:auto" />
+    <div style="width: 100%; display: flex; justify-content: center;">
+      <span style="width: auto;" />
       {{ mapMode }} - {{ toolbarPosition }}
-      <span style="width:auto" />
+      <span style="width: auto;" />
       <button @click="setPos">Position</button>
       <button @click="mapMode='edit'">Edit</button>
     </div>
@@ -14,7 +14,7 @@
       :center="mapCenter"
       :zoom="7"
       map-type-id="roadmap"
-      style="width: 100%; height: 800px"
+      style="width: 100%; height: 800px;"
       :options="{
           zoomControl: true,
           mapTypeControl: true,
@@ -47,11 +47,11 @@
     Vue.use(GmapVue, {
       load: {
         key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
-        libraries: 'places,drawing'
-      }
+        libraries: 'places,drawing',
+      },
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       new Vue({
         el: '#root',
         data: {
@@ -68,7 +68,7 @@
             strokeColor: '#999',
             draggable: false,
             editable: false,
-            clickable: true
+            clickable: true,
           },
           circleOptions: {
             fillColor: '#777',
@@ -77,7 +77,7 @@
             strokeColor: '#999',
             draggable: false,
             editable: false,
-            clickable: true
+            clickable: true,
           },
           polylineOptions: {
             fillColor: '#777',
@@ -86,8 +86,8 @@
             strokeColor: '#999',
             draggable: false,
             editable: false,
-            clickable: true
-          }
+            clickable: true,
+          },
         },
         watch: {
           mapMode(newMode, oldMode) {
@@ -103,7 +103,7 @@
               this.mapDraggable = false;
               this.mapCursor = 'default';
             }
-          }
+          },
         },
         mounted() {
           this.mapMode = 'ready';
@@ -122,13 +122,13 @@
               'RIGHT_BOTTOM',
               'BOTTOM_CENTER',
               'BOTTOM_LEFT',
-              'BOTTOM_RIGHT'
+              'BOTTOM_RIGHT',
             ];
 
             this.toolbarPosition =
               posTypes[Math.floor(Math.random() * posTypes.length)];
-          }
-        }
+          },
+        },
       });
     });
   </script>
