--- a/packages/gmap-vue/examples/infowindow.html
+++ b/packages/gmap-vue/examples/infowindow.html
@@ -2,11 +2,22 @@
   <div id="root">
     A basic example of using a single infowindow for 3 markers.
 
-    <gmap-map :center="center" :zoom="15" style="width: 100%; height: 500px">
-      <gmap-info-window :options="infoOptions" :position="infoWindowPos" :opened="infoWinOpen" @closeclick="infoWinOpen=false">
+    <gmap-map :center="center" :zoom="15" style="width: 100%; height: 500px;">
+      <gmap-info-window
+        :options="infoOptions"
+        :position="infoWindowPos"
+        :opened="infoWinOpen"
+        @closeclick="infoWinOpen=false"
+      >
       </gmap-info-window>
 
-      <gmap-marker :key="i" v-for="(m,i) in markers" :position="m.position" :clickable="true" @click="toggleInfoWindow(m,i)"></gmap-marker>
+      <gmap-marker
+        :key="i"
+        v-for="(m,i) in markers"
+        :position="m.position"
+        :clickable="true"
+        @click="toggleInfoWindow(m,i)"
+      ></gmap-marker>
     </gmap-map>
   </div>
 
@@ -16,17 +27,17 @@
   <script>
     Vue.use(GmapVue, {
       load: {
-        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc'
+        key: 'AIzaSyDf43lPdwlF98RCBsJOFNKOkoEjkwxb5Sc',
       },
     });
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       new Vue({
         el: '#root',
         data: {
           center: {
             lat: 47.376332,
-            lng: 8.547511
+            lng: 8.547511,
           },
           infoWindowPos: null,
           infoWinOpen: false,
@@ -36,31 +47,35 @@
             //optional: offset infowindow so it visually sits nicely on top of our marker
             pixelOffset: {
               width: 0,
-              height: -35
-            }
+              height: -35,
+            },
           },
-          markers: [{
-            position: {
-              lat: 47.376332,
-              lng: 8.547511
+          markers: [
+            {
+              position: {
+                lat: 47.376332,
+                lng: 8.547511,
+              },
+              infoText: '<strong>Marker 1</strong>',
             },
-            infoText: '<strong>Marker 1</strong>'
-          }, {
-            position: {
-              lat: 47.374592,
-              lng: 8.548867
+            {
+              position: {
+                lat: 47.374592,
+                lng: 8.548867,
+              },
+              infoText: '<strong>Marker 2</strong>',
             },
-            infoText: '<strong>Marker 2</strong>'
-          }, {
-            position: {
-              lat: 47.379592,
-              lng: 8.549867
+            {
+              position: {
+                lat: 47.379592,
+                lng: 8.549867,
+              },
+              infoText: '<strong>Marker 3</strong>',
             },
-            infoText: '<strong>Marker 3</strong>'
-          }]
+          ],
         },
         methods: {
-          toggleInfoWindow: function(marker, idx) {
+          toggleInfoWindow: function (marker, idx) {
             this.infoWindowPos = marker.position;
             this.infoOptions.content = marker.infoText;
 
@@ -72,13 +87,10 @@
             else {
               this.infoWinOpen = true;
               this.currentMidx = idx;
-
             }
-          }
-
-        }
+          },
+        },
       });
     });
   </script>
-
 </body>
