--- a/packages/gmap-vue/examples/polygon-editing-geojson.html
+++ b/packages/gmap-vue/examples/polygon-editing-geojson.html
@@ -8,10 +8,20 @@
       <gmap-autocomplete @place_changed="updateCenter($event)" />
     </label>
 
-    <gmap-map :center="center" :zoom="12" style="width: 100%; height: 500px" ref="map">
-      <gmap-polygon v-if="paths.length > 0" :paths="paths" :editable="true" @paths_changed="updateEdited($event)"
-          @rightclick="handleClickForDelete"
-          ref="polygon">
+    <gmap-map
+      :center="center"
+      :zoom="12"
+      style="width: 100%; height: 500px;"
+      ref="map"
+    >
+      <gmap-polygon
+        v-if="paths.length > 0"
+        :paths="paths"
+        :editable="true"
+        @paths_changed="updateEdited($event)"
+        @rightclick="handleClickForDelete"
+        ref="polygon"
+      >
       </gmap-polygon>
     </gmap-map>
 
@@ -21,8 +31,11 @@
     </div>
 
     <div>
-      <textarea :value="polygonGeojson" style="width: 100%; height: 200px"
-        @input="readGeojson">
+      <textarea
+        :value="polygonGeojson"
+        style="width: 100%; height: 200px;"
+        @input="readGeojson"
+      >
       </textarea>
       <div v-if="errorMessage">{{errorMessage}}</div>
     </div>
@@ -40,18 +53,17 @@
       },
     });
 
-    function closeLoop (path) {
-      return path.concat(path.slice(0, 1))
+    function closeLoop(path) {
+      return path.concat(path.slice(0, 1));
     }
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       window.XXX = new Vue({
         el: '#root',
         data: {
-          center: {lat: 1.38, lng: 103.8},
+          center: { lat: 1.38, lng: 103.8 },
           edited: null,
-          paths: [
-          ],
+          paths: [],
           mvcPaths: null,
           errorMessage: null,
           polygonGeojson: '',
@@ -59,28 +71,34 @@
         watch: {
           polygonPaths: _.throttle(function (paths) {
             if (paths) {
-              this.paths = paths
-              this.polygonGeojson = JSON.stringify({
-                type: 'Polygon',
-                coordinates: this.paths.map(path => closeLoop(path.map(({lat, lng}) => [lng, lat])))
-              }, null, 2)
+              this.paths = paths;
+              this.polygonGeojson = JSON.stringify(
+                {
+                  type: 'Polygon',
+                  coordinates: this.paths.map((path) =>
+                    closeLoop(path.map(({ lat, lng }) => [lng, lat]))
+                  ),
+                },
+                null,
+                2
+              );
             }
-          }, 1000)
+          }, 1000),
         },
         computed: {
           polygonPaths: function () {
-            if (!this.mvcPaths) return null
+            if (!this.mvcPaths) return null;
 
             let paths = [];
-            for (let i=0; i < this.mvcPaths.getLength(); i++) {
+            for (let i = 0; i < this.mvcPaths.getLength(); i++) {
               let path = [];
-              for (let j=0; j<this.mvcPaths.getAt(i).getLength(); j++) {
+              for (let j = 0; j < this.mvcPaths.getAt(i).getLength(); j++) {
                 let point = this.mvcPaths.getAt(i).getAt(j);
-                path.push({lat: point.lat(), lng: point.lng()});
+                path.push({ lat: point.lat(), lng: point.lng() });
               }
               paths.push(path);
             }
-            return paths
+            return paths;
           },
         },
         methods: {
@@ -88,59 +106,69 @@
             this.center = {
               lat: place.geometry.location.lat(),
               lng: place.geometry.location.lng(),
-            }
+            };
           },
           updateEdited: function (mvcPaths) {
-            this.mvcPaths = mvcPaths
+            this.mvcPaths = mvcPaths;
           },
           addPath: function () {
             // obtain the bounds, so we can guess how big the polygon should be
-            var bounds = this.$refs.map.$mapObject.getBounds()
-            var northEast = bounds.getNorthEast()
-            var southWest = bounds.getSouthWest()
-            var center = bounds.getCenter()
+            var bounds = this.$refs.map.$mapObject.getBounds();
+            var northEast = bounds.getNorthEast();
+            var southWest = bounds.getSouthWest();
+            var center = bounds.getCenter();
             var degree = this.paths.length + 1;
-            var f = Math.pow(0.66, degree)
+            var f = Math.pow(0.66, degree);
 
             // Draw a triangle. Use f to control the size of the triangle.
             // i.e., every time we add a path, we reduce the size of the triangle
             var path = [
-              { lng: center.lng(), lat: (1-f) * center.lat() + (f) * northEast.lat() },
-              { lng: (1-f) * center.lng() + (f) * southWest.lng(), lat: (1-f) * center.lat() + (f) * southWest.lat() },
-              { lng: (1-f) * center.lng() + (f) * northEast.lng(), lat: (1-f) * center.lat() + (f) * southWest.lat() },
-            ]
+              {
+                lng: center.lng(),
+                lat: (1 - f) * center.lat() + f * northEast.lat(),
+              },
+              {
+                lng: (1 - f) * center.lng() + f * southWest.lng(),
+                lat: (1 - f) * center.lat() + f * southWest.lat(),
+              },
+              {
+                lng: (1 - f) * center.lng() + f * northEast.lng(),
+                lat: (1 - f) * center.lat() + f * southWest.lat(),
+              },
+            ];
 
-            this.paths.push(path)
+            this.paths.push(path);
           },
           removePath: function () {
-            this.paths.splice(this.paths.length - 1, 1)
+            this.paths.splice(this.paths.length - 1, 1);
           },
           handleClickForDelete($event) {
             if ($event.vertex) {
-              this.$refs.polygon.$polygonObject.getPaths()
+              this.$refs.polygon.$polygonObject
+                .getPaths()
                 .getAt($event.path)
-                .removeAt($event.vertex)
+                .removeAt($event.vertex);
             }
           },
           readGeojson: function ($event) {
             try {
-              this.polygonGeojson = $event.target.value
+              this.polygonGeojson = $event.target.value;
 
               var v = JSON.parse($event.target.value);
 
-              this.paths = v.coordinates.map(linearRing =>
-                linearRing.slice(0, linearRing.length - 1)
-                .map(([lng, lat]) => ({lat, lng}))
-              )
+              this.paths = v.coordinates.map((linearRing) =>
+                linearRing
+                  .slice(0, linearRing.length - 1)
+                  .map(([lng, lat]) => ({ lat, lng }))
+              );
 
-              this.errorMessage = null
+              this.errorMessage = null;
             } catch (err) {
-              this.errorMessage = err.message
+              this.errorMessage = err.message;
             }
-          }
-        }
+          },
+        },
       });
     });
   </script>
-
 </body>
