--- a/packages/v3/cypress/runner/index.html
+++ b/packages/v3/cypress/runner/index.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Vite App</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
-    <script src="./main.js" type="module"></script>
+    <script src="./main.ts" type="module"></script>
   </head>
   <body>
     <div id="app"></div>
